[gd_scene load_steps=6 format=3 uid="uid://cpkmnev1qs7vf"]

[ext_resource type="Script" path="res://scenes/gui/elemets/modal_wnd/modal_wnd.gd" id="1_y37j5"]
[ext_resource type="Texture2D" uid="uid://4fdvmfacxhj8" path="res://assets/img/wnd_bg.png" id="2_dvtlo"]
[ext_resource type="Texture2D" uid="uid://bhr0h7vb0nm0f" path="res://assets/img/wnd_top.png" id="3_lua65"]
[ext_resource type="FontFile" uid="uid://dxxuxrpd08vvi" path="res://assets/fonts/RubikMonoOne.ttf" id="4_66jjr"]
[ext_resource type="Texture2D" uid="uid://b2bwq5xbsvku1" path="res://assets/img/btn_close.png" id="5_4gh8k"]

[node name="ModalWindow" type="Control"]
custom_minimum_size = Vector2(400, 400)
layout_mode = 3
anchor_right = 0.644444
anchor_bottom = 0.37375
script = ExtResource("1_y37j5")
metadata/_edit_use_anchors_ = true

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_bottom = 10

[node name="box" type="MarginContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 10
metadata/_edit_use_anchors_ = true

[node name="NinePatchRect" type="NinePatchRect" parent="MarginContainer/box"]
layout_mode = 2
texture = ExtResource("2_dvtlo")
patch_margin_left = 47
patch_margin_top = 51
patch_margin_right = 64
patch_margin_bottom = 62

[node name="NameWnd" type="MarginContainer" parent="MarginContainer"]
custom_minimum_size = Vector2(370, 110)
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/margin_left = 80
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 110

[node name="Box" type="NinePatchRect" parent="MarginContainer/NameWnd"]
layout_mode = 2
texture = ExtResource("3_lua65")
patch_margin_left = 42
patch_margin_top = 19
patch_margin_right = 31
patch_margin_bottom = 19

[node name="CaptionLabel" type="Label" parent="MarginContainer/NameWnd/Box"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("4_66jjr")
theme_override_font_sizes/font_size = 50
horizontal_alignment = 1
vertical_alignment = 1

[node name="BtnClose" type="MarginContainer" parent="MarginContainer"]
custom_minimum_size = Vector2(110, 110)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10
metadata/_edit_use_anchors_ = true

[node name="btn_close" type="TextureButton" parent="MarginContainer/BtnClose"]
layout_mode = 2
texture_normal = ExtResource("5_4gh8k")
stretch_mode = 5

[connection signal="pressed" from="MarginContainer/BtnClose/btn_close" to="." method="_on_window_closed"]
